2013-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.39 released.

        * Label elements renamed to "Name" elements
          and are no longer explicitly "required"
          for most anticipated usages of Term::Menus;
          though, are needed for some constructs and
          are therefore considered "best practice".
          Now using the CPAN modules PadWalker and
          Devel::Symdump to dynamically discover
          *MOST* Menu names.

        * Fixed a number of navigation components when
          using dynamic and anonymous Menus constructs.

        * Changed documentation to reflect changes, and
          describe "Explicit Named Macros" and coding
          approaches for their usage. 


2013-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.38 released.

        * Reworked a number of Result error messages to
          be more helpful to Menu developers.

        * Working toward goal of making Label element
          completely optional - not required.


2013-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.37 released.

        * Enabled returning '<' in anonymous subroutines so
          that user has option to code a return to parent
          Menus from a Result subroutine by simply returning
          '<'.


2013-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.36 released.

        * Tweaked formatting of documentation.


2013-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.35 released.

        * Minor fix for back and forward navigation.

        * Tweaked formatting of documentation.


2013-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.34 released.

        * Minor fix for Anonymous Subroutines.


2013-07-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.33 released.
