@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 f1975ab276c69a51fbd80229df9236f25e2c7132 ChangeLog
+SHA1 dee5fa08fc4e73b002e4046509b8184527a12cf2 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 938320681d0a69160e24af3240ddefea60659b19 META.yml
+SHA1 f569696242d39c964b0fdc69afc92705dbd48a17 META.yml
 SHA1 95d5816081b680da79bedb166c63ac225176f36a Makefile.PL
 SHA1 8b673061939e72411e4b717b9fd77b4954e33d70 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a4a9f7638f03a91284a90f02d3de2aa9c4896346 lib/Term/Menus.pm
+SHA1 189c9c6e273cd1e00830b8786243d1191e400614 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJR/eBuAAoJEBa/9Pad787EvyEIAKT2RO4UV+q0j1O/O5JhKQaS
-DXlBIE/3hT6J6DFiM8rSDbYZseyjlcpF0VBx7+2/ENYX3lV5CYpdG31uNrqNaNhA
-nRJ66K4+2UBRRkyihSpYmuZVccb7fvLX5K6o3m6OXszD90rSL2DT+flLfLorsS2o
-MKVAyughkpLGAnu9B3qA0Pvn00fNhtSpd9K28he06vW26SPzZRq4x5TTPMzd5Tfu
-U4hhJ2B0V4xVrUfenETADBAOOfUI/QcWIcs5eWpGmypLxohyrANqYxdvaSnd8m55
-9xs4IDPwsZX6F4gkZzJiwJCh/HfbDe7+p8+T62XP0w2D6++cCxUteRqIEtp1QQM=
-=2bdK
+iQEcBAEBAgAGBQJR/xUAAAoJEBa/9Pad787EowAH/iJlM3PmRP3Iuu7E7O1UeJY/
+yckDaPaKHZnDvOfoTwuUYILwQZlbFItPChGSpJzVZrQUai0RBOQ+aH1zUIdmDxmZ
+GRL2pUvyjQMUn6KmanpXkoR2dEMmFjotOXe2W+u7fLS25wNFuw02N/3tBRsEtn/C
+G4ZJmjQgmmyH3VwnbDivJml2wHTkRs0JbQgN5EaB23mvDROBBc9H1a7rC6iLb6G5
+7nm2a4jKpWlNNx1h9XQ2fgZd3P+HlazDKPF0h6seorg4PFk6UanDELEgUk9SkqhZ
+HJ8F7IcGCTMiLkO2qq1c00kBw0WDAR5b+2nsi1qeOoF/po0xwdNoErRn4jVzmk0=
+=NLL/
 -----END PGP SIGNATURE-----
