@@ -1,3 +1,10 @@
+2013-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.40 released.
+
+        * Fixed CODE parsing routines affecting Macros.
+
+
 2013-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.39 released.
